# ming

./: .env.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  ecosystem.config.js  start_all.sh
.github/workflows/: release.yml
crates/a2s/: Cargo.toml
crates/a2s/examples/: a2s_hex.rs  basic.rs
crates/a2s/src/: client.rs  lib.rs  types.rs
crates/api/: Cargo.toml
crates/api/src/: auth.rs  main.rs
crates/bot/: Cargo.toml
crates/bot/migrations/2026-04-03-init/: down.sql
crates/bot/migrations/2026-04-06-auto-reconnect/: down.sql  up.sql
crates/bot/migrations/2026-04-06-server-management/: down.sql  up.sql
crates/bot/migrations/2026-04-06-server-settings/: down.sql  up.sql
crates/bot/migrations/2026-04-12-cctv-channel/: down.sql  up.sql
crates/bot/migrations/2026-04-12-event-settings/: up.sql
crates/bot/src/: main.rs
crates/bot/src/commands/: cctv.rs  credentials.rs  mod.rs  servers.rs  setup.rs  team_check.rs  vending.rs
crates/bot/src/db/: mod.rs  models.rs  schema.rs
crates/bot/src/gcommands/: deals.rs  mod.rs  pop.rs  vending.rs
crates/bot/src/services/: ai.rs  battlemetrics.rs  config_dashboard.rs  dashboard.rs  events.rs  fcm.rs  management.rs  map.rs  mod.rs  rustplus_client.rs  stat_tracker.rs  vending_subs.rs
crates/bot/src/services/steam/: client.rs  mod.rs  parser.rs  resolver.rs  types.rs
crates/bot/src/utils/: items.json  map.rs  mod.rs  vending.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/db/: Cargo.toml
crates/db/migrations/2026-04-03-init/: up.sql
crates/db/migrations/2026-04-12-event-settings/: down.sql
crates/db/migrations/2026-04-14-oauth-sessions/: down.sql  up.sql
crates/db/migrations/2026-04-14-player-stats/: down.sql  up.sql
crates/db/migrations/2026-04-15-user-rustplus-credentials/: down.sql  up.sql
crates/db/migrations/2026-05-14-ai-channels/: down.sql  up.sql
crates/db/migrations/2026-06-07-vending-subs/: down.sql  up.sql
crates/db/migrations/2026-06-08-tracking-system/: down.sql  up.sql
crates/db/migrations/2026-06-08-tracking-system-tts/: down.sql  up.sql
crates/db/migrations/2026-06-08-tts-toggle/: down.sql  up.sql
crates/db/migrations/2026-06-10-player-links/: down.sql  up.sql
crates/db/migrations/2026-06-12-player-analytics/: down.sql  up.sql
crates/db/migrations/2026-07-08-103240-0000_vending_transactions/: down.sql  up.sql
crates/db/src/: lib.rs  models.rs  schema.rs
crates/minibot/: Cargo.toml  items.json
crates/minibot/src/: autocomplete.rs  connection_manager.rs  fcm.rs  framework.rs  items.rs  listener.rs  main.rs  market.rs  team.rs  update.rs  vending.rs
crates/minibot/src/tracking/: commands.rs  dashboard.rs  dashboard_handlers_temp.rs  hours_cmd.rs  mod.rs  tts.rs  watchdog.rs
crates/minibot/src/tracking/analytics/: charts.rs  mod.rs  recorder.rs  report.rs
crates/minibot/src/tracking/atlas/: client.rs
crates/minibot/src/tracking/battlemetrics/: client.rs  types.rs
crates/minibot/src/tracking/steam/: client.rs  mod.rs  parser.rs  resolver.rs
crates/push-receiver/: Cargo.toml
crates/push-receiver/src/: checkin.rs  client.rs  decrypt.rs  lib.rs  mcs.rs  register.rs
crates/rustplus/: Cargo.toml  README.md  build.rs
crates/rustplus/src/: camera.rs  client.rs  error.rs  events.rs  lib.rs  ratelimit.rs
crates/rustplus/src/monitors/: mod.rs
crates/team_dec/: Cargo.toml  README.md
crates/team_dec/examples/: cli.rs
crates/team_dec/src/: detector.rs  error.rs  lib.rs  models.rs
crates/team_dec/src/services/: battlemetrics.rs  mod.rs  steam.rs  steamid_com.rs
scripts/: start.js
web/: index.html  package.json  vite.config.ts
web/src/: App.vue  router.ts  style.css
web/src/features/alerts/: EventLog.vue
web/src/features/chat/: TeamChat.vue
web/src/features/devices/: DeviceManager.vue
web/src/features/map/: TacticalMap.vue
web/src/features/map/components/: ExplosionMarker.vue  Marker.vue
web/src/features/navigation/: Header.vue  Sidebar.vue
web/src/features/status/: WSStatusBar.vue
web/src/features/team/: ServerStats.vue  TeamList.vue
web/src/shared/utils/: coordinates.ts
web/src/stores/: alerts.ts  auth.ts  chat.ts  devices.ts  map.ts  serverInfo.ts  servers.ts  team.ts  ws.ts
web/src/views/: Dashboard.vue  LinkRustPlus.vue  VendingMarket.vue
