[workspace]
members = [
    "crates/bot",
    "crates/push-receiver",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json", "rustls-tls-native-roots"] }
prost = "0.14.3"
tokio-rustls = "0.26"
rustls-native-certs = "0.8"
p256 = { version = "0.13", features = ["ecdh"] }
rand = "0.10.0"
hkdf = "0.13.0"
aes-gcm = "0.10"
base64 = "0.22"
thiserror = "2"
tracing = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
bytes = "1"
serde_json = "1"
futures-util = { version = "0.3", features = ["sink"] }
sha2 = "0.11.0"
