[workspace]
members = [
    "crates/bot",
    "crates/push-receiver",
    "crates/rustplus",
]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "deny"
# You might also want to catch .expect()
expect_used = "deny"


[workspace.dependencies]
scraper = "0.20"
regex = "1.10"
moka = { version = "0.12", features = ["future"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
prost = "0.14.3"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
p256 = { version = "0.13", features = ["ecdh"] }
rand = "0.8"
hkdf = "0.12"
aes-gcm = "0.10"
base64 = "0.22"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
bytes = "1"
serde_json = "1"
futures-util = { version = "0.3", features = ["sink"] }
sha2 = "0.10"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
poise = "0.6"
serenity = { version = "0.12", features = ["client", "gateway", "model", "cache", "builder"] }
diesel = { version = "2.2", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
diesel_migrations = { version = "2.2", features = ["sqlite"] }
dotenvy = "0.15"
chrono = "0.4"
anyhow = "1.0"
once_cell = "1.20"
http = "1.2"
