[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
db = { path = "../db" }
scraper.workspace = true
regex.workspace = true
moka.workspace = true
rand.workspace = true
push-receiver = { path = "../push-receiver" }
rustplus = { path = "../rustplus" }
tokio.workspace = true
serde.workspace = true
reqwest.workspace = true
rustls.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
poise.workspace = true
serenity.workspace = true
diesel.workspace = true
dotenvy.workspace = true
chrono.workspace = true
anyhow.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["v4"] }
once_cell.workspace = true
