[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
push-receiver = { path = "../push-receiver" }
axum = "0.8"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid = { workspace = true, features = ["v4"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true