[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel.workspace = true
libsqlite3-sys = { workspace = true, features = ["bundled"] }
diesel_migrations.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
dotenvy.workspace = true
anyhow.workspace = true
tracing.workspace = true
