[package]
name = "minibot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
poise.workspace = true
serenity.workspace = true
anyhow.workspace = true
regex.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
diesel.workspace = true
rustls.workspace = true
db = { path = "../db" }
rustplus = { path = "../rustplus" }
push-receiver = { path = "../push-receiver" }
base64.workspace = true
reqwest.workspace = true
scraper.workspace = true
moka.workspace = true
chrono.workspace = true
rand.workspace = true
