[package]
name = "team_dec"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.4"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "native-tls"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
