[package]
name = "team_dec"
version = "0.1.0"
edition = "2024"

[dependencies]
regex.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
once_cell.workspace = true
tracing.workspace = true
